--- a/Utils/pose_utils/CMakeLists.txt
+++ b/Utils/pose_utils/CMakeLists.txt
@@ -25,6 +25,10 @@ include_directories(
     include
     )
 
-add_library(pose_utils 
-   ${ARMADILLO_LIBRARIES}
+add_library(pose_utils
    src/pose_utils.cpp)
+
+target_link_libraries(pose_utils
+  ${catkin_LIBRARIES}
+  ${ARMADILLO_LIBRARIES}
+)
